# pixy-uppy

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: devices.rs  encoder.rs  error.rs  frames.rs  lib.rs  models.rs  paths.rs  pipeline.rs  probe.rs
crates/core/src/upscalers/: mod.rs
packaging/: FETCH_BINARIES.md  THIRD_PARTY_NOTICES.md
packaging/scripts/: fetch_binaries_linux.sh  fetch_binaries_windows.ps1  verify_binaries_linux.sh  verify_binaries_windows.ps1
