[package]
name = "pixy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.37.3", default-features = false, features = ["loaded"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"
once_cell = "1.19"
regex = "1.10"
path-absolutize = "3.1"
rayon = { version = "1.10", optional = true }

[features]
parallel = ["rayon"]


