[package]
name = "pixy_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pixy_core = { path = "../../../crates/core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


